First semi-functioning version

--- a/help.html
+++ b/help.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-    <b>This plugin creates a QGIS plugin template for developing your own plugins</b>
+    <b>Create a template for developing your own QGIS plugins</b>
 <div id='help' style='font-size:.8em;'>
 <dl>
     <dt><b>Class Name</b></dt>
@@ -21,5 +21,6 @@
     <dd>Your email address (used in the copyright header)</dd>
 </dl>
 </div>
+<span style='color:#800000'>All fields are required</span>
 </body>
 </html>
