Added [author] section to metadata. Added validation to the class name to eliminate spaces and use CamelCase.

--- a/help.html
+++ b/help.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-    <b>Create a template for developing your own QGIS plugins</b>
+    <b>Create a template for developing QGIS plugins</b>
 <div id='help' style='font-size:.8em;'>
 <dl>
     <dt><b>Class Name</b></dt>
@@ -19,8 +19,10 @@
     <dd>Your name or company name (used in the copyright header)</dd>
     <dt><b>Email address</b></dt>
     <dd>Your email address (used in the copyright header)</dd>
+    <dt><b>Website/Bug tracker</b></dt>
+    <dd>Url of your plugins web page or bug tracker</dd>
 </dl>
 </div>
-<span style='color:#800000'>All fields are required</span>
+<span style='color:#800000;font-size:.9em;'>All fields are required</span>
 </body>
 </html>
