--- a/help.html
+++ b/help.html
@@ -1,6 +1,8 @@
 <html>
 <body>
     <b>Create a template for developing QGIS plugins</b>
+    <p/>
+<span style='color:#800000;font-size:.9em;'>Required fields:</span>
 <div id='help' style='font-size:.8em;'>
 <dl>
     <dt><b>Class Name</b></dt>
@@ -19,10 +21,19 @@
     <dd>Your name or company name (used in the copyright header)</dd>
     <dt><b>Email address</b></dt>
     <dd>Your email address (used in the copyright header)</dd>
-    <dt><b>Website/Bug tracker</b></dt>
-    <dd>Url of your plugins web page or bug tracker</dd>
 </dl>
 </div>
-<span style='color:#800000;font-size:.9em;'>All fields are required</span>
+<span style='color:#800000;font-size:.9em;'>Optional fields:</span>
+<div id='help' style='font-size:.8em;'>
+<dl>
+    <dt><b>Bug tracker</b></dt>
+    <dd>Url of your plugin's bug tracker</dd>
+    <dt><b>Home page</b></dt>
+    <dd>Url of your plugin's home page</dd>
+    <dt><b>Repository</b></dt>
+    <dd>Url of your plugin repository (if you have one)</dd>
+    <dt><b>Tags</b></dt>
+    <dd>A comma separated list of tags that describe the plugin features or function</dd>
+</div>
 </body>
 </html>
