Revised naming to reduce confusion in terms

--- a/help.html
+++ b/help.html
@@ -7,10 +7,10 @@
 <dl>
     <dt><b>Class Name</b></dt>
     <dd> This is the Python class name for your plugin. It should be in CamelCase.</dd>
-    <dt><b>Short descriptive title</b></dt>
-    <dd>This is the title that will be displayed in the QGIS plugin manager</dd>
+    <dt><b>Plugin name</b></dt>
+    <dd>This is the name for your plugin that  will be displayed in the QGIS plugin manager and the plugin installer</dd>
     <dt><b>Description</b></dt>
-    <dd>A one-liner description of the plugin</dd>
+    <dd>A one-liner description of the plugin that appears in the plugin manager and the plugin installer</dd>
     <dt><b>Version number</b></dt>
     <dd>The version of this plugin</dd>
     <dt><b>Minimum required QGIS version</b></dt>
