--- a/help.html
+++ b/help.html
@@ -8,15 +8,15 @@
     <dt><b>Class Name</b></dt>
     <dd> This is the Python class name for your plugin. It should be in CamelCase.</dd>
     <dt><b>Plugin name</b></dt>
-    <dd>This is the name for your plugin that  will be displayed in the QGIS plugin manager and the plugin installer</dd>
+    <dd>This is the name for your plugin that will be displayed in the QGIS Plugin Manager and the Plugins menu</dd>
     <dt><b>Description</b></dt>
-    <dd>A one-liner description of the plugin that appears in the plugin manager and the plugin installer</dd>
+    <dd>A one-liner description of the plugin that appears in the Plugin Manager</dd>
     <dt><b>Version number</b></dt>
     <dd>The version of this plugin</dd>
     <dt><b>Minimum required QGIS version</b></dt>
     <dd>QGIS version required for this plugin to work</dd>
     <dt><b>Text for the menu item</b></dt>
-    <dd>This is the text that will appear in the menu</dd>
+    <dd>This is the text that will appear in the menu under your Plugin name</dd>
     <dt><b>Author/Company name</b></dt>
     <dd>Your name or company name (used in the copyright header)</dd>
     <dt><b>Email address</b></dt>
