--- a/index.html
+++ b/index.html
@@ -181,6 +181,22 @@ directory. The file should contain a single tag per line. For example:</p>
 </pre></div>
 </div>
 </dd>
+<dt><strong>Menu</strong></dt>
+<dd><p class="first">Choose an appropriate location for your plugin&#8217;s menu based on its main
+functionality. This will place your menu under one of the following main
+menus:</p>
+<blockquote>
+<div><ul class="simple">
+<li>Plugins</li>
+<li>Database</li>
+<li>Raster</li>
+<li>Vector</li>
+<li>Web</li>
+</ul>
+</div></blockquote>
+<p class="last">If none of the specific categories apply (Database, Raster, Vector, Web), choose <em>Plugins</em>.
+Your choice is also written to the <em>category</em> field in metadata.txt.</p>
+</dd>
 <dt><strong>Experimental</strong></dt>
 <dd>Check this box if your plugin is considered experimental,
 meaning it is either incomplete or may cause unintended consequences. This
